force-app/main/default/objects/Contact/fields/About_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>About_Volunteer__c</fullName>
    <label>About Volunteer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>