force-app/main/default/objects/Contact/fields/Ad_hoc_Request_Packing__c.field-meta.xml
<CustomField>
    <fullName>Ad_hoc_Request_Packing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ad hoc Request - Packing</label>
    <type>Checkbox</type>
</CustomField>