force-app/main/default/objects/Contact/fields/Any_Skills_Please_specify__c.field-meta.xml
<CustomField>
    <fullName>Any_Skills_Please_specify__c</fullName>
    <label>Any Skills (Please specify)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>