force-app/main/default/objects/Contact/fields/Area_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Interest__c</fullName>
    <description>was &quot;Volunteering Skills&quot;</description>
    <label>Area of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bread Distribution (Weekly)</fullName>
            </value>
            <value>
                <fullName>Bread Distribution (Standby)</fullName>
            </value>
            <value>
                <fullName>Self Collection Centres</fullName>
            </value>
            <value>
                <fullName>Food Goodie Bag (Packing in Warehouse)</fullName>
            </value>
            <value>
                <fullName>Food Goodie Bag (Food Drives)</fullName>
            </value>
            <value>
                <fullName>Toys from the Heart</fullName>
            </value>
            <value>
                <fullName>Birthdays from the Heart</fullName>
            </value>
            <value>
                <fullName>Admin Support (Office)</fullName>
            </value>
            <value>
                <fullName>Events (Ad-hoc)</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>