force-app/main/default/objects/Contact/fields/Auto_Reminder_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Auto_Reminder_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Reminder Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>