force-app/main/default/objects/Contact/fields/Birth_month__c.field-meta.xml
<CustomField>
    <fullName>Birth_month__c</fullName>
    <formula>Month(Birthdate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birth month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>