force-app/main/default/objects/Contact/fields/Bread_Run__c.field-meta.xml
<CustomField>
    <fullName>Bread_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bread Run</label>
    <type>Checkbox</type>
</CustomField>