force-app/main/default/objects/Contact/fields/Car__c.field-meta.xml
<CustomField>
    <fullName>Car__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Car</label>
    <type>Checkbox</type>
</CustomField>