force-app/main/default/objects/Contact/fields/Citizenship__c.field-meta.xml
<CustomField>
    <fullName>Citizenship__c</fullName>
    <label>Citizenship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dependent Pass</fullName>
            </value>
            <value>
                <fullName>Employment Pass (professional)</fullName>
            </value>
            <value>
                <fullName>Long Term Visit Pass/Plus (TLVP / LTVP+)</fullName>
            </value>
            <value>
                <fullName>Overstayer</fullName>
            </value>
            <value>
                <fullName>Singapore Citizen</fullName>
            </value>
            <value>
                <fullName>Singapore PR</fullName>
            </value>
            <value>
                <fullName>Social Visit Pass</fullName>
            </value>
            <value>
                <fullName>S Pass</fullName>
            </value>
            <value>
                <fullName>Special Pass</fullName>
            </value>
            <value>
                <fullName>Stateless</fullName>
            </value>
            <value>
                <fullName>Student Pass</fullName>
            </value>
            <value>
                <fullName>Training WP (OJT)</fullName>
            </value>
            <value>
                <fullName>Undocumented</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Work Permit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>