force-app/main/default/objects/Contact/fields/Classification_of_Occupations__c.field-meta.xml
<CustomField>
    <fullName>Classification_of_Occupations__c</fullName>
    <label>Classification of Occupations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G1 Legislators, Senior Officials and Managers</fullName>
            </value>
            <value>
                <fullName>G2 Professionals</fullName>
            </value>
            <value>
                <fullName>G3 Associate Professionals and Technicians</fullName>
            </value>
            <value>
                <fullName>G4 Clerical Support Workers</fullName>
            </value>
            <value>
                <fullName>G5 Service and Sales Workers</fullName>
            </value>
            <value>
                <fullName>G6 Agricultural and Fishery Workers</fullName>
            </value>
            <value>
                <fullName>G7 Craftsmen and Related Trades Workers</fullName>
            </value>
            <value>
                <fullName>G8 Plant and Machine Operators and Assemblers</fullName>
            </value>
            <value>
                <fullName>G9 Cleaners, Labourers and Related Workers</fullName>
            </value>
            <value>
                <fullName>G10 Workers Not Elsewhere Classified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>