force-app/main/default/objects/Contact/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <description>Generate the CAC No. when</description>
    <inlineHelpText>This is the Communication Access Card generated by the system when the client is registered with SADeaf and approved</inlineHelpText>
    <label>CAC No.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>