force-app/main/default/objects/Contact/fields/Code_of_Conduct__c.field-meta.xml
<CustomField>
    <fullName>Code_of_Conduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Code of Conduct</label>
    <type>Checkbox</type>
</CustomField>