force-app/main/default/objects/Contact/fields/Contact_Form_Message__c.field-meta.xml
<CustomField>
    <fullName>Contact_Form_Message__c</fullName>
    <description>Contact form on website</description>
    <label>Contact Form Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>