force-app/main/default/objects/Contact/fields/CS_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>CS_Enquiry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to identify if a contact is originating from CS Enquiry</description>
    <label>CS Enquiry</label>
    <type>Checkbox</type>
</CustomField>