force-app/main/default/objects/Contact/fields/Date_of_Orientation_Session__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Orientation_Session__c</fullName>
    <label>Date of Orientation Session</label>
    <type>Date</type>
</CustomField>