force-app/main/default/objects/Contact/fields/Date_of_Second_Call__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Second_Call__c</fullName>
    <label>Date of Second Call</label>
    <type>Date</type>
</CustomField>