force-app/main/default/objects/Contact/fields/Dialect_Group__c.field-meta.xml
<CustomField>
    <fullName>Dialect_Group__c</fullName>
    <label>Dialect Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cantonese</fullName>
            </value>
            <value>
                <fullName>Hainanese</fullName>
            </value>
            <value>
                <fullName>Hakka</fullName>
            </value>
            <value>
                <fullName>Hockchew</fullName>
            </value>
            <value>
                <fullName>Hokkien</fullName>
            </value>
            <value>
                <fullName>Teochew</fullName>
            </value>
            <value>
                <fullName>Others (please specific)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>