force-app/main/default/objects/Contact/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <label>Display Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>