force-app/main/default/objects/Contact/fields/Donation_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Donation_Frequency__c</fullName>
    <label>Donation Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-time</fullName>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>