force-app/main/default/objects/Contact/fields/Donor_Type__c.field-meta.xml
<CustomField>
    <fullName>Donor_Type__c</fullName>
    <defaultValue>if( $RecordType.DeveloperName = &apos;Contact&apos;, &apos;Organisation&apos;, null)</defaultValue>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Organisation</fullName>
            </value>
            <value>
                <fullName>Anonymous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>