force-app/main/default/objects/Contact/fields/DonorActivity__c.field-meta.xml
<CustomField>
    <fullName>DonorActivity__c</fullName>
    <description>Will be active when Contact make donation. When the last donation date is greater than 6 months set to inactive</description>
    <inlineHelpText>When the last donation date is greater than 6 months set to inactive</inlineHelpText>
    <label>Donor Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>