force-app/main/default/objects/Contact/fields/Dormant_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Dormant_End_Date__c</fullName>
    <label>Dormant End Date</label>
    <type>Date</type>
</CustomField>