force-app/main/default/objects/Contact/fields/Dormant_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Dormant_Start_Date__c</fullName>
    <label>Dormant Start Date</label>
    <type>Date</type>
</CustomField>