force-app/main/default/objects/Contact/fields/Email_Org__c.field-meta.xml
<CustomField>
    <fullName>Email_Org__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This is the personal Email id</description>
    <inlineHelpText>This field must strictly be used for entering the personal email</inlineHelpText>
    <label>Email (Org)</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>