force-app/main/default/objects/Contact/fields/Emergency_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Home_Phone__c</fullName>
    <label>Emergency Home Phone</label>
    <type>Phone</type>
</CustomField>