force-app/main/default/objects/Contact/fields/Emergency_Name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Name__c</fullName>
    <label>Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>