force-app/main/default/objects/Contact/fields/Family_Background__c.field-meta.xml
<CustomField>
    <fullName>Family_Background__c</fullName>
    <label>Family Background</label>
    <type>TextArea</type>
</CustomField>