force-app/main/default/objects/Contact/fields/First_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Assignment_Date__c</fullName>
    <inlineHelpText>Auto Updated based on Assigned Volunteer &quot;First Assignment Date&quot;</inlineHelpText>
    <label>First Assignment Date</label>
    <type>Date</type>
</CustomField>