force-app/main/default/objects/Contact/fields/Food_Packing__c.field-meta.xml
<CustomField>
    <fullName>Food_Packing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Food Packing</label>
    <type>Checkbox</type>
</CustomField>