force-app/main/default/objects/Contact/fields/Handle_Urgent_Request__c.field-meta.xml
<CustomField>
    <fullName>Handle_Urgent_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handle Urgent Request</label>
    <type>Checkbox</type>
</CustomField>