force-app/main/default/objects/Contact/fields/Hearing_Status__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Status__c</fullName>
    <label>Hearing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hearing</fullName>
                <default>true</default>
                <label>Hearing</label>
            </value>
            <value>
                <fullName>Hard-on-Hearing</fullName>
            </value>
            <value>
                <fullName>Deaf</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>