force-app/main/default/objects/Contact/fields/Highest_Education_Level__c.field-meta.xml
<CustomField>
    <fullName>Highest_Education_Level__c</fullName>
    <label>Highest Education Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Degree</fullName>
            </value>
            <value>
                <fullName>Diploma</fullName>
            </value>
            <value>
                <fullName>GCE A</fullName>
            </value>
            <value>
                <fullName>GCE O</fullName>
            </value>
            <value>
                <fullName>Higher Nitec</fullName>
            </value>
            <value>
                <fullName>Honours</fullName>
            </value>
            <value>
                <fullName>ITE/NTC</fullName>
            </value>
            <value>
                <fullName>Junior College - Year 1</fullName>
            </value>
            <value>
                <fullName>Junior College - Year 2</fullName>
            </value>
            <value>
                <fullName>Masters</fullName>
            </value>
            <value>
                <fullName>Nitec</fullName>
            </value>
            <value>
                <fullName>N Levels</fullName>
            </value>
            <value>
                <fullName>No Formal Education</fullName>
            </value>
            <value>
                <fullName>PHd</fullName>
            </value>
            <value>
                <fullName>Polytechnic</fullName>
            </value>
            <value>
                <fullName>Post Graduate</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Primary 1</fullName>
            </value>
            <value>
                <fullName>Primary 2</fullName>
            </value>
            <value>
                <fullName>Primary 3</fullName>
            </value>
            <value>
                <fullName>Primary 4</fullName>
            </value>
            <value>
                <fullName>Primary 5</fullName>
            </value>
            <value>
                <fullName>Primary 6</fullName>
            </value>
            <value>
                <fullName>PSLE</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Secondary 1 – Express</fullName>
            </value>
            <value>
                <fullName>Secondary 1 – Normal (Academic)</fullName>
            </value>
            <value>
                <fullName>Secondary 1 – Normal (Technical)</fullName>
            </value>
            <value>
                <fullName>Secondary 2 – Express</fullName>
            </value>
            <value>
                <fullName>Secondary 2 – Normal (Academic)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>