force-app/main/default/objects/Contact/fields/ID_No__c.field-meta.xml
<CustomField>
    <fullName>ID_No__c</fullName>
    <externalId>true</externalId>
    <label>Tax Recipient ID No</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>