force-app/main/default/objects/Contact/fields/ID_Type__c.field-meta.xml
<CustomField>
    <fullName>ID_Type__c</fullName>
    <label>Tax Recipient ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NRIC</fullName>
            </value>
            <value>
                <fullName>FIN</fullName>
            </value>
            <value>
                <fullName>UEN-Business</fullName>
            </value>
            <value>
                <fullName>UEN-Local Company</fullName>
            </value>
            <value>
                <fullName>UEN-Others</fullName>
            </value>
            <value>
                <fullName>ITR</fullName>
            </value>
            <value>
                <fullName>ASGD</fullName>
            </value>
            <value>
                <fullName>OTHERS</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>BC</fullName>
                <isActive>false</isActive>
                <label>BC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>