force-app/main/default/objects/Contact/fields/ISS_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>ISS_Enquiry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ISS Enquiry</label>
    <type>Checkbox</type>
</CustomField>