force-app/main/default/objects/Contact/fields/isTaxRecipient__c.field-meta.xml
<CustomField>
    <fullName>isTaxRecipient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isTaxRecipient</label>
    <type>Checkbox</type>
</CustomField>