force-app/main/default/objects/Contact/fields/Know_SL__c.field-meta.xml
<CustomField>
    <fullName>Know_SL__c</fullName>
    <inlineHelpText>Do you know Sing Language?</inlineHelpText>
    <label>Know Sign Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Learning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>