force-app/main/default/objects/Contact/fields/Last_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Assignment_Date__c</fullName>
    <label>Last Assignment Date</label>
    <type>Date</type>
</CustomField>