force-app/main/default/objects/Contact/fields/Length_of_Volunteer_Months__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Volunteer_Months__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(Volunteer_accepted_date__c)), ISPICKVAL( Volunteer_Status__c, &quot;Accepted&quot;)),
IF((TODAY() - Volunteer_accepted_date__c) / 365 * 12 &lt; 1, 1, (TODAY() - Volunteer_accepted_date__c) / 365 * 12
),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Length of Volunteer (Months)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>