force-app/main/default/objects/Contact/fields/Mailing_Address_Unit__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Unit__c</fullName>
    <label>Mailing Address Unit</label>
    <length>30</length>
    <type>Text</type>
</CustomField>