force-app/main/default/objects/Contact/fields/Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Main Contact</label>
    <type>Checkbox</type>
</CustomField>