force-app/main/default/objects/Contact/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Member</label>
    <type>Checkbox</type>
</CustomField>