force-app/main/default/objects/Contact/fields/Mobile_Personal__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Personal__c</fullName>
    <description>This is the personal mobile</description>
    <inlineHelpText>Enter the personal mobile number here. If the contact has two numbers, enter the personal mobile here</inlineHelpText>
    <label>Mobile(Personal)</label>
    <type>Phone</type>
</CustomField>