force-app/main/default/objects/Contact/fields/Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Income__c</fullName>
    <label>Monthly Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Income</fullName>
            </value>
            <value>
                <fullName>Below $500</fullName>
            </value>
            <value>
                <fullName>$500 -$999</fullName>
            </value>
            <value>
                <fullName>$1,000 - $1,499</fullName>
            </value>
            <value>
                <fullName>$1,500 - $1,999</fullName>
            </value>
            <value>
                <fullName>$2,000 - $2,499</fullName>
            </value>
            <value>
                <fullName>$2,500 - $2,999</fullName>
            </value>
            <value>
                <fullName>$3001 - $3500</fullName>
            </value>
            <value>
                <fullName>$3,500 - $3,999</fullName>
            </value>
            <value>
                <fullName>$4,000 - $4,999</fullName>
            </value>
            <value>
                <fullName>$5,000 - $5,999</fullName>
            </value>
            <value>
                <fullName>$6,000 - $6,999</fullName>
            </value>
            <value>
                <fullName>$7,000 and above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>